--- a/trunk/Neptuo.WebSite/Neptuo.WebSite.csproj
+++ b/trunk/Neptuo.WebSite/Neptuo.WebSite.csproj
@@ -121,6 +121,7 @@
     <Compile Include="Models\HttpRequestBaseExtensions.cs" />
     <Compile Include="Models\MenuItem.cs" />
     <Compile Include="Models\Webs\DescriptionItemModel.cs" />
+    <Compile Include="Models\Webs\ImageModel.cs" />
     <Compile Include="Models\Webs\WebModel.cs" />
     <Compile Include="Models\Webs\WebDataService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -136,6 +137,8 @@
     <Content Include="Content\bootstrap\bootstrap.min.css" />
     <Content Include="Content\common.css" />
     <Content Include="Content\Images\mnau.jpg" />
+    <Content Include="Content\Images\References\zs.jpg" />
+    <Content Include="Content\Images\References\zus.jpg" />
     <Content Include="Content\responsivness.css" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Content\design.css" />
