--- a/trunk/Neptuo.WebSite/Neptuo.WebSite.csproj
+++ b/trunk/Neptuo.WebSite/Neptuo.WebSite.csproj
@@ -131,7 +131,9 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Content Include="App_Data\Webs.xml" />
+    <Content Include="App_Data\Webs.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Content\bootstrap\bootstrap-theme.css" />
     <Content Include="Content\bootstrap\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap\bootstrap.css" />
