--- a/Neptuo.WebSite/Neptuo.WebSite.csproj
+++ b/Neptuo.WebSite/Neptuo.WebSite.csproj
@@ -22,6 +22,7 @@
     <IISExpressUseClassicPipelineMode />
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -125,6 +126,7 @@
     <Compile Include="Models\Projects\ProjectImageModel.cs" />
     <Compile Include="Models\Projects\ProjectModel.cs" />
     <Compile Include="Models\Projects\ProjectModelViewModel.cs" />
+    <Compile Include="Models\Projects\ProjectTextModel.cs" />
     <Compile Include="Models\Projects\ProjectVersionDescriptionModel.cs" />
     <Compile Include="Models\Projects\ProjectVersionModel.cs" />
     <Compile Include="Models\Webs\DescriptionItemModel.cs" />
@@ -149,10 +151,36 @@
     <Content Include="Content\bootstrap\bootstrap.min.css" />
     <Content Include="Content\common.css" />
     <Content Include="Content\Images\mnau.jpg" />
+    <Content Include="Content\Images\Projects\chromium-updater-01.png" />
+    <Content Include="Content\Images\Projects\chromium-updater-02.png" />
+    <Content Include="Content\Images\Projects\chromium-updater-03.png" />
+    <Content Include="Content\Images\Projects\chromium-updater-04.png" />
+    <Content Include="Content\Images\Projects\link-extractor-01.png" />
+    <Content Include="Content\Images\Projects\link-extractor-02.png" />
+    <Content Include="Content\Images\Projects\link-extractor-03.png" />
+    <Content Include="Content\Images\Projects\productivity-01.png" />
+    <Content Include="Content\Images\Projects\productivity-02.png" />
+    <Content Include="Content\Images\Projects\solution-runner-01.png" />
+    <Content Include="Content\Images\Projects\solution-runner-02.png" />
+    <Content Include="Content\Images\Projects\solution-runner-03.png" />
+    <Content Include="Content\Images\Projects\vocabulary-app-01.png" />
+    <Content Include="Content\Images\Projects\vocabulary-app-02.png" />
+    <Content Include="Content\Images\Projects\vocabulary-app-03.png" />
+    <Content Include="Content\Images\Projects\vocabulary-app-04.png" />
+    <Content Include="Content\Images\Projects\vocabulary-app-05.png" />
+    <Content Include="Content\Images\Projects\windows-dock-01.jpg" />
+    <Content Include="Content\Images\Projects\windows-dock-02.png" />
+    <Content Include="Content\Images\Projects\windows-dock-03.png" />
+    <Content Include="Content\Images\Projects\windows-dock-04.png" />
+    <Content Include="Content\Images\Projects\windows-dock-05.png" />
+    <Content Include="Content\Images\References\hotproject.jpg" />
     <Content Include="Content\Images\References\jm.jpg" />
     <Content Include="Content\Images\References\jmold.jpg" />
     <Content Include="Content\Images\References\kamelibo.jpg" />
+    <Content Include="Content\Images\References\lfplovo.jpg" />
+    <Content Include="Content\Images\References\papayateam.jpg" />
     <Content Include="Content\Images\References\school.jpg" />
+    <Content Include="Content\Images\References\superliga.jpg" />
     <Content Include="Content\Images\References\zs.jpg" />
     <Content Include="Content\Images\References\zus.jpg" />
     <Content Include="Content\responsivness.css" />
