--- a/Neptuo.WebSite/packages.config
+++ b/Neptuo.WebSite/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommonMark.NET" version="0.13.4" targetFramework="net40" />
+  <package id="CommonMark.NET" version="0.14.0" targetFramework="net461" />
   <package id="jQuery" version="1.9.1" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.0" targetFramework="net40" />
@@ -10,8 +10,9 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="4.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net40" />
+  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net40" requireReinstallation="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
+  <package id="Neptuo" version="5.2.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
   <package id="Twitter.Bootstrap" version="3.0.0" targetFramework="net40" />
 </packages>
