--- a/Neptuo.WebSite/Neptuo.WebSite.csproj
+++ b/Neptuo.WebSite/Neptuo.WebSite.csproj
@@ -160,10 +160,10 @@
     <Content Include="Content\bootstrap\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap\bootstrap.css" />
     <Content Include="Content\bootstrap\bootstrap.min.css" />
-    <Content Include="Content\common.css" />
-    <Content Include="Content\blog.css" />
-    <Content Include="Content\box.css" />
-    <Content Include="Content\folder.css" />
+    <Content Include="Content\Stylesheet\common.css" />
+    <Content Include="Content\Stylesheet\blog.css" />
+    <Content Include="Content\Stylesheet\box.css" />
+    <Content Include="Content\Stylesheet\folder.css" />
     <Content Include="Content\Images\mnau.jpg" />
     <Content Include="Content\Images\Projects\chromium-updater-01.png" />
     <Content Include="Content\Images\Projects\chromium-updater-02.png" />
@@ -197,13 +197,25 @@
     <Content Include="Content\Images\References\superliga.jpg" />
     <Content Include="Content\Images\References\zs.jpg" />
     <Content Include="Content\Images\References\zus.jpg" />
-    <Content Include="Content\responsivness.css" />
+    <Content Include="Content\Stylesheet\responsivness.css" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
-    <Content Include="Content\design.css" />
+    <Content Include="Content\Stylesheet\design.css" />
     <Content Include="Content\Images\Background.png" />
     <Content Include="Content\Images\FootBackground.png" />
     <Content Include="Content\Images\Logo.png" />
-    <Content Include="Content\syntax.css" />
+    <Content Include="Content\Stylesheet\syntax.css" />
+    <None Include="compilerconfig.json" />
+    <None Include="compilerconfig.json.defaults">
+      <DependentUpon>compilerconfig.json</DependentUpon>
+    </None>
+    <Content Include="Content\Stylesheet\_variables.scss" />
+    <None Include="Content\web.scss" />
+    <Content Include="Content\web.css">
+      <DependentUpon>web.scss</DependentUpon>
+    </Content>
+    <Content Include="Content\web.min.css">
+      <DependentUpon>web.css</DependentUpon>
+    </Content>
     <Content Include="Global.asax" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.woff" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.ttf" />
