Remove unused logos. Include images in csproj.

--- a/Neptuo.WebSite/Neptuo.WebSite.csproj
+++ b/Neptuo.WebSite/Neptuo.WebSite.csproj
@@ -160,6 +160,9 @@
     <Content Include="Content\bootstrap\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap\bootstrap.css" />
     <Content Include="Content\bootstrap\bootstrap.min.css" />
+    <Content Include="Content\Images\BackgroundSingle.png" />
+    <Content Include="Content\Images\Logo-170.png" />
+    <Content Include="Content\Images\Logo-220.png" />
     <Content Include="Content\Stylesheet\common.css" />
     <Content Include="Content\Stylesheet\blog.css" />
     <Content Include="Content\Stylesheet\box.css" />
