Styles for IE. Responsiveness small features.

--- a/Neptuo.WebSite/Neptuo.WebSite.csproj
+++ b/Neptuo.WebSite/Neptuo.WebSite.csproj
@@ -200,6 +200,7 @@
     <Content Include="Content\Images\References\superliga.jpg" />
     <Content Include="Content\Images\References\zs.jpg" />
     <Content Include="Content\Images\References\zus.jpg" />
+    <Content Include="Content\Stylesheet\ie.css" />
     <Content Include="Content\Stylesheet\responsivness.css" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Content\Stylesheet\design.css" />
