--- a/Neptuo.WebSite/Neptuo.WebSite.csproj
+++ b/Neptuo.WebSite/Neptuo.WebSite.csproj
@@ -213,9 +213,9 @@
       <DependentUpon>compilerconfig.json</DependentUpon>
     </None>
     <Content Include="Content\Stylesheet\_variables.scss" />
-    <Content Include="Content\fonts\gabriola.eot" />
-    <Content Include="Content\fonts\gabriola.ttf" />
-    <Content Include="Content\fonts\gabriola.woff" />
+    <Content Include="fonts\gabriola.eot" />
+    <Content Include="fonts\gabriola.ttf" />
+    <Content Include="fonts\gabriola.woff" />
     <Content Include="Content\bootstrap.min.css.map" />
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
