--- a/Neptuo.WebSite/Neptuo.WebSite.csproj
+++ b/Neptuo.WebSite/Neptuo.WebSite.csproj
@@ -140,6 +140,7 @@
     <Compile Include="Models\Projects\ProjectTextModel.cs" />
     <Compile Include="Models\Projects\ProjectVersionDescriptionModel.cs" />
     <Compile Include="Models\Projects\ProjectVersionModel.cs" />
+    <Compile Include="Models\TextModel.cs" />
     <Compile Include="Models\Webs\DescriptionItemModel.cs" />
     <Compile Include="Models\Webs\ImageModel.cs" />
     <Compile Include="Models\Webs\WebModel.cs" />
