--- a/src/Neptuo.WebSite/packages.config
+++ b/src/Neptuo.WebSite/packages.config
@@ -4,12 +4,13 @@
   <package id="ColorCode" version="1.0.1" targetFramework="net461" />
   <package id="CommonMark.NET" version="0.14.0" targetFramework="net461" />
   <package id="jQuery" version="1.9.1" targetFramework="net40" />
-  <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.Razor" version="2.0.20715.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net40" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net40" requireReinstallation="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Neptuo" version="5.2.0" targetFramework="net461" />
+  <package id="Neptuo.AspNet.Navigation" version="1.0.0-beta1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="Skybrud.SyntaxHighlighter" version="1.0.1" targetFramework="net461" />
 </packages>
