--- a/src/Neptuo.WebSite/Neptuo.WebSite.csproj
+++ b/src/Neptuo.WebSite/Neptuo.WebSite.csproj
@@ -287,6 +287,7 @@
     <Content Include="Views\Content\Blog.cshtml" />
     <Content Include="Views\Content\BlogPost.cshtml" />
     <Content Include="Views\Content\BlogAtom.cshtml" />
+    <Content Include="Views\Content\Home.cz.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
